refactor(service): ♻️ 优化代码结构与Java流操作
将Collectors.toList()简化为.toList()方法调用，提升代码简洁性
调整ClusterServiceRoleInstanceConfigServiceImpl类的格式对齐问题

优化导入语句，移除未使用的java.util.stream.Collectors引入

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>